--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,41 @@
 /*  your css code here. If applicable */
+.container {
+	width:500px;
+	height:200px; 
+	background-color:lightgray;
+	border-radius: 10px;
+	border: 3px solid black;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	margin:auto;
+}
+
+.circle1 {
+	background-color:green;
+	border-radius: 50%;
+	width:100px;
+	height:100px;
+	border: 1px solid black;
+	display: inline-block;
+	margin:auto;
+}
+.circle2 {
+	background-color:yellow;
+	border-radius: 50%;
+	width:100px;
+	height:100px;
+	border: 1px solid black;
+	display: inline-block;
+	margin:auto;
+}
+.circle3 {
+	background-color:red;
+	border-radius: 50%;
+	width:100px;
+	height:100px;
+	border: 1px solid black;
+	display: inline-block;
+	margin:auto;
+}
+
